# sec-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  server.json
.claude/: settings.local.json
.forgejo/workflows/: audit.yml  release.yml
.github/workflows/: close-prs.yml
src/: main.rs
tests/: live_smoke.rs
