[package]
name = "sec-mcp"
version = "0.4.1"
edition = "2021"
rust-version = "1.85"
authors = ["Stefan Ractliffe"]
description = "MCP server for SEC EDGAR data — company filings, financial concepts, and company info via Claude Desktop"
license = "MIT"
repository = "https://codeberg.org/brechanbech/sec-mcp"
homepage = "https://codeberg.org/brechanbech/sec-mcp"
readme = "README.md"
keywords = ["mcp", "sec", "edgar", "finance", "claude"]
categories = ["command-line-utilities", "api-bindings"]

[[bin]]
name = "sec-mcp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "charset", "http2", "system-proxy", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
anyhow = "1"
urlencoding = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "1"
dirs = "6"
